# warp-wiki

./: .env  Cargo.toml  README.md  diesel进行数据库迁移说明.md  env
migrations/2021-05-13-071702_admins/: down.sql  up.sql
migrations/2021-05-14-135214_linksnap/: down.sql  up.sql
migrations/2021-05-16-122122_users_sessions/: down.sql  up.sql
src/: db.rs  filters.rs  main.rs  schema.rs  session.rs
src/handlers/: admin_handler.rs  mod.rs
src/models/: admin_model.rs  link_model.rs  mod.rs  user_model.rs
src/routes/: admin_route.rs  link_route.rs  mod.rs
